--- a/.github/workflows/vjudge_submit.yml
+++ b/.github/workflows/vjudge_submit.yml
@@ -26,7 +26,7 @@ jobs:
           echo "VJUDGE_USERNAME=${{ secrets.VJUDGE_USERNAME }}" >> .env
           echo "VJUDGE_PASSWORD=${{ secrets.VJUDGE_PASSWORD }}" >> .env
           echo "CONTEST_ID=${{ secrets.CONTEST_ID }}" >> .env
-          echo "PROBLEMS='${{ secrets.PROBLEMS }}'" | jq -c '.' >> .env
+          echo "PROBLEMS=${{ secrets.PROBLEMS }}" >> .env
 
       - name: 🚀 執行提交腳本
         run: python submit.py
