--- a/example.env
+++ b/example.env
@@ -6,9 +6,4 @@ VJUDGE_PASSWORD=your_password
 CONTEST_ID=698494
 
 # 提交題目與程式碼位置 (使用 JSON 格式)
-PROBLEMS={
-    "A": {"language": "5", "file": "solutions/A.cpp"},
-    "B": {"language": "5", "file": "solutions/B.cpp"},
-    "C": {"language": "6", "file": "solutions/C.py"},
-    "D": {"language": "6", "file": "solutions/D.py"}
-}
+PROBLEMS={"A": {"language": "5", "file": "solutions/A.cpp"},"B": {"language": "5", "file": "solutions/B.cpp"},"C": {"language": "6", "file": "solutions/C.py"},"D": {"language": "6", "file": "solutions/D.py"}}
